--- a/plugins/pager/pager-dialog.ui
+++ b/plugins/pager/pager-dialog.ui
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <interface>
-  <!-- interface-requires gtk+ 2.12 -->
+  <!-- interface-requires gtk+ 2.14 -->
   <!-- interface-requires libxfce4ui 0.0 -->
   <!-- interface-naming-policy toplevel-contextual -->
   <object class="XfceTitledDialog" id="dialog">
-    <property name="title" translatable="yes">Window Menu Properties</property>
+    <property name="title" translatable="yes">Pager Properties</property>
     <property name="icon_name">gtk-properties</property>
     <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
@@ -13,33 +13,37 @@
         <property name="visible">True</property>
         <property name="spacing">2</property>
         <child>
-          <object class="GtkVBox" id="vbox1">
+          <object class="GtkVBox" id="vbox2">
             <property name="visible">True</property>
             <property name="border_width">6</property>
             <property name="spacing">6</property>
             <child>
-              <object class="GtkFrame" id="frame3">
+              <object class="GtkFrame" id="frame2">
                 <property name="visible">True</property>
+                <property name="border_width">6</property>
                 <property name="label_xalign">0</property>
                 <property name="shadow_type">none</property>
                 <child>
-                  <object class="GtkAlignment" id="alignment3">
+                  <object class="GtkAlignment" id="alignment2">
                     <property name="visible">True</property>
-                    <property name="left_padding">12</property>
+                    <property name="top_padding">6</property>
+                    <property name="bottom_padding">12</property>
+                    <property name="left_padding">18</property>
+                    <property name="right_padding">6</property>
                     <child>
-                      <object class="GtkVBox" id="vbox3">
+                      <object class="GtkVBox" id="vbox4">
                         <property name="visible">True</property>
-                        <property name="border_width">6</property>
                         <property name="spacing">6</property>
                         <child>
-                          <object class="GtkHBox" id="hbox1">
+                          <object class="GtkHBox" id="hbox3">
                             <property name="visible">True</property>
                             <property name="spacing">12</property>
                             <child>
-                              <object class="GtkLabel" id="label5">
+                              <object class="GtkLabel" id="label4">
                                 <property name="visible">True</property>
-                                <property name="xalign">0</property>
-                                <property name="label" translatable="yes">Button layout:</property>
+                                <property name="label" translatable="yes">Number of _rows:</property>
+                                <property name="use_underline">True</property>
+                                <property name="mnemonic_widget">spin1</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -47,15 +51,13 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkComboBox" id="style">
+                              <object class="GtkSpinButton" id="spin1">
                                 <property name="visible">True</property>
-                                <property name="model">style-model</property>
-                                <child>
-                                  <object class="GtkCellRendererText" id="cellrenderertext1"/>
-                                  <attributes>
-                                    <attribute name="text">0</attribute>
-                                  </attributes>
-                                </child>
+                                <property name="can_focus">True</property>
+                                <property name="adjustment">rows</property>
+                                <property name="snap_to_ticks">True</property>
+                                <property name="numeric">True</property>
+                                <property name="update_policy">if-valid</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -68,8 +70,8 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkCheckButton" id="workspace-actions">
-                            <property name="label" translatable="yes">Show workspace a_ctions</property>
+                          <object class="GtkCheckButton" id="show-names">
+                            <property name="label" translatable="yes">Show workspace _names</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
@@ -81,29 +83,23 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkCheckButton" id="workspace-names">
-                            <property name="label" translatable="yes">Show workspace _names</property>
+                          <object class="GtkAlignment" id="alignment1">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">False</property>
-                            <property name="use_underline">True</property>
-                            <property name="draw_indicator">True</property>
+                            <property name="xalign">0</property>
+                            <property name="xscale">0</property>
+                            <child>
+                              <object class="GtkButton" id="settings-button">
+                                <property name="label" translatable="yes">Workspace _Settings...</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">True</property>
+                                <property name="image">image1</property>
+                                <property name="use_underline">True</property>
+                              </object>
+                            </child>
                           </object>
                           <packing>
                             <property name="position">2</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkCheckButton" id="urgentcy-notification">
-                            <property name="label" translatable="yes">Enable _urgency notification</property>
-                            <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">False</property>
-                            <property name="use_underline">True</property>
-                            <property name="draw_indicator">True</property>
-                          </object>
-                          <packing>
-                            <property name="position">3</property>
                           </packing>
                         </child>
                       </object>
@@ -111,7 +107,7 @@
                   </object>
                 </child>
                 <child type="label">
-                  <object class="GtkLabel" id="label1">
+                  <object class="GtkLabel" id="label5">
                     <property name="visible">True</property>
                     <property name="label" translatable="yes">Appearance</property>
                     <attributes>
@@ -126,40 +122,34 @@
               </packing>
             </child>
             <child>
-              <object class="GtkFrame" id="frame1">
+              <object class="GtkFrame" id="frame3">
                 <property name="visible">True</property>
+                <property name="border_width">6</property>
                 <property name="label_xalign">0</property>
                 <property name="shadow_type">none</property>
                 <child>
-                  <object class="GtkAlignment" id="alignment1">
+                  <object class="GtkAlignment" id="alignment3">
                     <property name="visible">True</property>
-                    <property name="left_padding">12</property>
+                    <property name="top_padding">6</property>
+                    <property name="bottom_padding">12</property>
+                    <property name="left_padding">18</property>
+                    <property name="right_padding">6</property>
                     <child>
-                      <object class="GtkVBox" id="vbox2">
+                      <object class="GtkCheckButton" id="workspace-scrolling">
+                        <property name="label" translatable="yes">Switch workspaces using the mouse _wheel</property>
                         <property name="visible">True</property>
-                        <property name="border_width">6</property>
-                        <property name="spacing">6</property>
-                        <child>
-                          <object class="GtkCheckButton" id="all-workspaces">
-                            <property name="label" translatable="yes">Show windows from _all workspaces</property>
-                            <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">False</property>
-                            <property name="use_underline">True</property>
-                            <property name="draw_indicator">True</property>
-                          </object>
-                          <packing>
-                            <property name="position">0</property>
-                          </packing>
-                        </child>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="use_underline">True</property>
+                        <property name="draw_indicator">True</property>
                       </object>
                     </child>
                   </object>
                 </child>
                 <child type="label">
-                  <object class="GtkLabel" id="label3">
+                  <object class="GtkLabel" id="label7">
                     <property name="visible">True</property>
-                    <property name="label" translatable="yes">Filtering</property>
+                    <property name="label" translatable="yes">Behaviour</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
@@ -173,7 +163,6 @@
             </child>
           </object>
           <packing>
-            <property name="expand">False</property>
             <property name="position">1</property>
           </packing>
         </child>
@@ -208,18 +197,15 @@
       <action-widget response="0">close-button</action-widget>
     </action-widgets>
   </object>
-  <object class="GtkListStore" id="style-model">
-    <columns>
-      <!-- column-name title -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0" translatable="yes">Icon</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">Arrow</col>
-      </row>
-    </data>
+  <object class="GtkImage" id="image1">
+    <property name="visible">True</property>
+    <property name="icon_name">xfce4-workspaces</property>
+  </object>
+  <object class="GtkAdjustment" id="rows">
+    <property name="value">1</property>
+    <property name="lower">1</property>
+    <property name="upper">10</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
   </object>
 </interface>
