--- a/plugins/systray/systray-dialog.glade
+++ b/plugins/systray/systray-dialog.glade
@@ -55,9 +55,9 @@
                               <object class="GtkLabel" id="label2">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">_Number of rows:</property>
+                                <property name="label" translatable="yes">_Maximum icon size (px):</property>
                                 <property name="use_underline">True</property>
-                                <property name="mnemonic_widget">rows</property>
+                                <property name="mnemonic_widget">size-max</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -65,10 +65,10 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkSpinButton" id="rows">
+                              <object class="GtkSpinButton" id="size-max">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="adjustment">rows-adjustment</property>
+                                <property name="adjustment">size-adjustment</property>
                                 <property name="numeric">True</property>
                               </object>
                               <packing>
@@ -279,10 +279,10 @@
       <action-widget response="0">help-button</action-widget>
     </action-widgets>
   </object>
-  <object class="GtkAdjustment" id="rows-adjustment">
-    <property name="value">1</property>
-    <property name="lower">1</property>
-    <property name="upper">10</property>
+  <object class="GtkAdjustment" id="size-adjustment">
+    <property name="value">32</property>
+    <property name="lower">12</property>
+    <property name="upper">64</property>
     <property name="step_increment">1</property>
     <property name="page_increment">2</property>
   </object>
